--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,14 @@
 body {
   min-height: 100vh;
+  margin: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  margin: 10px;
 }
 
 .grid-container {
@@ -15,9 +21,8 @@ body {
 }
 
 .grid-box {
-  height: 16px;
-  width: 16px;
-  border: 1px solid black;
+  outline: 1px solid black;
+  outline-offset: -1px;
 }
 
 .fill {
