--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,33 @@
+@import url("https://fonts.googleapis.com/css2?family=Kolker+Brush&display=swap");
+
 body {
   min-height: 100vh;
   margin: 0;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.outer-container {
+  background-color: #d00000;
+  border: 5px solid #a00000;
+  border-radius: 16px;
+  padding: 50px 50px 0 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+}
+
 button {
   margin: 10px;
+  border-radius: 8px;
 }
 
 .grid-container {
+  background-color: white;
+  border: 5px solid #a00000;
+  border-radius: 16px;
   display: flex;
   flex-direction: column;
 }
@@ -26,5 +42,32 @@ button {
 }
 
 .fill {
-  background-color: black;
+  /* background-color: black; */
+}
+
+.bottom-row {
+  padding: 15px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  font-family: "Kolker Brush", cursive;
+  font-size: 64px;
+  color: goldenrod;
+}
+
+.dial {
+  height: 64px;
+  width: 64px;
+  background-color: white;
+  border: 2px solid lightgrey;
+  border-radius: 32px;
 }
